--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -251,7 +251,7 @@ if (WITH_FESAPI)
 		${FETPAPI_FESAPI_SOURCES}
 		${FETPAPI_FESAPI_HEADERS}
 	)
-	target_include_directories(${PROJECT_NAME} PRIVATE ${HDF5_C_INCLUDE_DIR} ${FESAPI_INCLUDE_DIR})
+	target_include_directories(${PROJECT_NAME} PRIVATE ${FESAPI_INCLUDE_DIR})
 endif (WITH_FESAPI)
 
 target_sources(${PROJECT_NAME} PRIVATE ${ALL_SOURCES_AND_HEADERS})
@@ -283,6 +283,14 @@ if (WIN32)
 endif (WIN32)
 
 add_subdirectory(doc)
+
+if (WITH_FESAPI)
+	set (WITH_TEST OFF CACHE BOOL "Also build the unit tests.")
+	if (WITH_TEST)
+		enable_testing()
+		add_subdirectory(test)
+	endif (WITH_TEST)
+endif (WITH_FESAPI)
 
 # ============================================================================
 # Install Fetpapi library
