--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -45,7 +45,7 @@ endif ()
 if (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
 	set (EXTRA_COMPILE_ARGS "extra_compile_args=['/DSWIG_TYPE_TABLE=FESTAPI']")
 else ()
-	set (EXTRA_COMPILE_ARGS "extra_compile_args=['-std=c++11 -DSWIG_TYPE_TABLE=FESTAPI']")
+	set (EXTRA_COMPILE_ARGS "extra_compile_args=['-DSWIG_TYPE_TABLE=FESTAPI -std=c++11']")
 endif()
 configure_file(${CMAKE_SOURCE_DIR}/cmake/setup_etp.py.in ${CMAKE_SOURCE_DIR}/python/setup.py) # Overwrite if different
 
