Allow CentOS7 cmake (inf to v3.21)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,8 @@
-cmake_minimum_required(VERSION 3.21)
+if (WIN32)
+	cmake_minimum_required(VERSION 3.21)
+else ()
+	cmake_minimum_required(VERSION 3.12)
+endif (WIN32)
 
 project(Fetpapi)
 
