--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -25,21 +25,27 @@ else (WIN32)
 		set (ASSEMBLY_NAME ${PROJECT_NAME}${CMAKE_DEBUG_POSTFIX})
 	endif (SWIG_LINKED_TO_RELEASE)
 endif (WIN32)
-cmake_path(GET AVRO_LIBRARY_RELEASE PARENT_PATH AVRO_LIBRARY_DIR_RELEASE)
+#cmake_path(GET AVRO_LIBRARY_RELEASE PARENT_PATH AVRO_LIBRARY_DIR_RELEASE)
+get_filename_component(AVRO_LIBRARY_DIR_RELEASE ${AVRO_LIBRARY_RELEASE} DIRECTORY)
 set (AVRO_LIBRARY_DIR_RELEASE ",'${AVRO_LIBRARY_DIR_RELEASE}'")
-cmake_path(GET AVRO_LIBRARY_RELEASE STEM LAST_ONLY AVRO_LIBRARY_RELEASE_WLE)
+#cmake_path(GET AVRO_LIBRARY_RELEASE STEM LAST_ONLY AVRO_LIBRARY_RELEASE_WLE)
+get_filename_component(AVRO_LIBRARY_RELEASE_WLE ${AVRO_LIBRARY_RELEASE} NAME_WLE)
 set (AVRO_LIBRARY_RELEASE_WLE ",'${AVRO_LIBRARY_RELEASE_WLE}'")
 if (Boost_SYSTEM_LIBRARY_RELEASE)
-	cmake_path(GET Boost_SYSTEM_LIBRARY_RELEASE PARENT_PATH Boost_LIBRARY_DIR_RELEASE)
+	#cmake_path(GET Boost_SYSTEM_LIBRARY_RELEASE PARENT_PATH Boost_LIBRARY_DIR_RELEASE)
+	get_filename_component(Boost_LIBRARY_DIR_RELEASE ${Boost_SYSTEM_LIBRARY_RELEASE} DIRECTORY)
 	set(Boost_LIBRARY_DIR_RELEASE ",'${Boost_LIBRARY_DIR_RELEASE}'")
-	cmake_path(GET Boost_SYSTEM_LIBRARY_RELEASE STEM LAST_ONLY Boost_LIBRARY_RELEASE_WLE)
+	#cmake_path(GET Boost_SYSTEM_LIBRARY_RELEASE STEM LAST_ONLY Boost_LIBRARY_RELEASE_WLE)
+	get_filename_component(Boost_LIBRARY_RELEASE_WLE ${Boost_SYSTEM_LIBRARY_RELEASE} NAME_WLE)
 	set (Boost_LIBRARY_RELEASE_WLE ",'${Boost_LIBRARY_RELEASE_WLE}'")
 endif()
 if (WITH_FESAPI)
 	set (FESAPI_INCLUDE_DIR_FOR_SETUP_PY ",'${FESAPI_INCLUDE_DIR}'")
-	cmake_path(GET FESAPI_LIBRARY_RELEASE PARENT_PATH FESAPI_LIBRARY_DIR_RELEASE)
+	#cmake_path(GET FESAPI_LIBRARY_RELEASE PARENT_PATH FESAPI_LIBRARY_DIR_RELEASE)
+	get_filename_component(FESAPI_LIBRARY_DIR_RELEASE ${FESAPI_LIBRARY_RELEASE} DIRECTORY)
 	set (FESAPI_LIBRARY_DIR_RELEASE ",'${FESAPI_LIBRARY_DIR_RELEASE}'")
-	cmake_path(GET FESAPI_LIBRARY_RELEASE STEM LAST_ONLY FESAPI_LIBRARY_RELEASE_WLE)
+	#cmake_path(GET FESAPI_LIBRARY_RELEASE STEM LAST_ONLY FESAPI_LIBRARY_RELEASE_WLE)
+	get_filename_component(FESAPI_LIBRARY_RELEASE_WLE ${FESAPI_LIBRARY_RELEASE} NAME_WLE)
 	set (FESAPI_LIBRARY_RELEASE_WLE ",'${FESAPI_LIBRARY_RELEASE_WLE}'")
 endif ()
 if (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
