--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -193,25 +193,27 @@ jobs:
           CIBW_BUILD: cp38-manylinux_* cp39-manylinux_* cp310-manylinux_* cp311-manylinux_* cp312-manylinux_* cp313-manylinux_*
           CIBW_ARCHS: auto64
           CIBW_BEFORE_ALL: >
-            yum install -y wget gcc-c++ boost-devel &&
+            yum install -y wget gcc-c++ &&
             yum search epel-release &&
             yum info epel-release &&
             yum install -y epel-release &&
             yum --enablerepo=epel install -y cmake3 &&
             cd / &&
+            wget https://archives.boost.io/release/1.85.0/source/boost_1_85_0.tar.gz &&
+            tar xf boost_1_85_0.tar.gz &&
             wget https://archive.apache.org/dist/avro/avro-1.11.3/cpp/avro-cpp-1.11.3.tar.gz &&
             tar xf avro-cpp-1.11.3.tar.gz &&
             sed -i 's/install (TARGETS avrocpp avrocpp_s/install (TARGETS avrocpp_s/' avro-cpp-1.11.3/CMakeLists.txt &&
             sed -i 's/install (TARGETS avrogencpp RUNTIME DESTINATION bin)//' avro-cpp-1.11.3/CMakeLists.txt &&
             mkdir avro-build &&
             cd avro-build &&
-            cmake3 -Wno-dev -Wno-deprecated -DCMAKE_POSITION_INDEPENDENT_CODE=ON -DCMAKE_INSTALL_PREFIX=/avro-install /avro-cpp-1.11.3 &&
+            cmake3 -Wno-dev -Wno-deprecated -DBoost_INCLUDE_DIR=/boost_1_85_0/boost -DCMAKE_POSITION_INDEPENDENT_CODE=ON -DCMAKE_INSTALL_PREFIX=/avro-install /avro-cpp-1.11.3 &&
             cmake3 --build . -j2 --target avrocpp_s --config Release &&
             cmake3 --install . &&
             cd / &&
             mkdir build &&
             cd build &&
-            cmake3 -DCMAKE_BUILD_TYPE=Release -DAVRO_ROOT=/avro-install -DAVRO_USE_STATIC_LIBS=TRUE -DWITH_PYTHON_WRAPPING=TRUE -DCMAKE_INSTALL_PREFIX:STRING=/fetpapi-install {project} &&
+            cmake3 -DCMAKE_BUILD_TYPE=Release -DBoost_INCLUDE_DIR=/boost_1_85_0/boost -DAVRO_ROOT=/avro-install -DAVRO_USE_STATIC_LIBS=TRUE -DWITH_PYTHON_WRAPPING=TRUE -DCMAKE_INSTALL_PREFIX:STRING=/fetpapi-install {project} &&
             cmake3 --build . -j2 --config Release &&
             cmake3 --install .
           CIBW_REPAIR_WHEEL_COMMAND_LINUX: >
