--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -202,7 +202,7 @@ jobs:
             wget https://archives.boost.io/release/1.73.0/source/boost_1_73_0.tar.gz &&
             tar xf boost_1_73_0.tar.gz &&
             cd boost_1_73_0 &&
-            ./bootstrap.sh --prefix=/boost-install --with-libraries=filesystem iostreams program_options regex system &&
+            ./bootstrap.sh --prefix=/boost-install --with-libraries=filesystem,iostreams,program_options,regex,system &&
             ./b2 install &&
             cd / &&
             wget https://archive.apache.org/dist/avro/avro-1.11.3/cpp/avro-cpp-1.11.3.tar.gz &&
