--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -193,7 +193,7 @@ jobs:
           CIBW_BUILD: cp38-manylinux_* cp39-manylinux_* cp310-manylinux_* cp311-manylinux_* cp312-manylinux_* cp313-manylinux_*
           CIBW_ARCHS: auto64
           CIBW_BEFORE_ALL: >
-            yum install -y wget gcc-c++ &&
+            yum install -y wget gcc-c++ openssl-devel &&
             yum search epel-release &&
             yum info epel-release &&
             yum install -y epel-release &&
