--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -150,8 +150,9 @@ if (WITH_ETP_SSL)
 	if (NOT TARGET OpenSSL::SSL OR NOT TARGET OpenSSL::Crypto)
 		find_package(OpenSSL REQUIRED)
 	endif()
+	target_link_libraries(${PROJECT_NAME} PRIVATE OpenSSL::SSL OpenSSL::Crypto)
 	if (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
-		target_link_libraries(${PROJECT_NAME} PRIVATE OpenSSL::SSL OpenSSL::Crypto OpenSSL::applink)
+		target_link_libraries(${PROJECT_NAME} PRIVATE OpenSSL::applink)
 	endif ()
 endif ()
 
