--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -30,11 +30,10 @@ get_filename_component(AVRO_LIBRARY_DIR_RELEASE ${AVRO_LIBRARY_RELEASE} DIRECTOR
 set (AVRO_LIBRARY_DIR_RELEASE ",'${AVRO_LIBRARY_DIR_RELEASE}'")
 #cmake_path(GET AVRO_LIBRARY_RELEASE STEM LAST_ONLY AVRO_LIBRARY_RELEASE_WLE)
 get_filename_component(AVRO_LIBRARY_RELEASE_WLE ${AVRO_LIBRARY_RELEASE} NAME_WLE)
-if (WIN32)
-	set (AVRO_LIBRARY_RELEASE_WLE ",'${AVRO_LIBRARY_RELEASE_WLE}'")
-else ()
-	set (AVRO_LIBRARY_RELEASE_WLE ",':${AVRO_LIBRARY_RELEASE_WLE}'")
+if (UNIX)
+	string(REGEX REPLACE "^lib" "" AVRO_LIBRARY_RELEASE_WLE AVRO_LIBRARY_RELEASE_WLE)
 endif()
+set (AVRO_LIBRARY_RELEASE_WLE ",'${AVRO_LIBRARY_RELEASE_WLE}'")
 if (Boost_SYSTEM_LIBRARY_RELEASE)
 	#cmake_path(GET Boost_SYSTEM_LIBRARY_RELEASE PARENT_PATH Boost_LIBRARY_DIR_RELEASE)
 	get_filename_component(Boost_LIBRARY_DIR_RELEASE ${Boost_SYSTEM_LIBRARY_RELEASE} DIRECTORY)
